--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://drivendata.co/blog/automated-abstraction-benchmark"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -89,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Preprocessing"
+    "### Data Exploration"
    ]
   },
   {
@@ -451,6 +458,367 @@
     "    MODEL_DIR, device_map=DEVICE, local_files_only=True\n",
     ")\n",
     "tokenizer = AutoTokenizer.from_pretrained(MODEL_DIR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building prompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We've provided a basic prompt here that defines:\n",
+    "\n",
+    "A role - an abstractor that takes narratives and returns values for the binary and categorical variables \n",
+    "\n",
+    "Lists of the variables we expect output for\n",
+    "\n",
+    "Options for the variable values\n",
+    "\n",
+    "Expected output format\n",
+    "\n",
+    "Example input and output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we'll be batching our inputs in order to speed up prediction time (not all LLM pipelines will use batching)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_features(features):\n",
+    "    \"\"\"\n",
+    "    Order features by ascending string length\n",
+    "    \"\"\"\n",
+    "    features[\"str_len\"] = features.NarrativeLE.str.len()\n",
+    "    features = features.sort_values(by=\"str_len\")\n",
+    "    return features.drop(columns=[\"str_len\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batch_features(features, batch_size: int):\n",
+    "    \"\"\"\n",
+    "    Batch features together\n",
+    "    \"\"\"\n",
+    "    if len(features) > batch_size:\n",
+    "        return np.array_split(features, int(len(features) / batch_size))\n",
+    "    return [features]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A padding token is used to fill shorter inputs in a batch to match the longest input's size, which ensures consistency in input size. Here, we're just using the end-of-sequence token as the padding token."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "model.config.pad_token_id = model.config.eos_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating model output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BATCH_SIZE = 10\n",
+    "MAX_NEW_TOKENS=300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_on_batch(feature_batch, model, tokenizer):\n",
+    "    \"\"\"\n",
+    "    Tokenize input batches, generate and decode outputs\n",
+    "    \"\"\"\n",
+    "    # Tokenize input narratives (NarrativeLE) in batch\n",
+    "    prompts = [PROMPT_TEMPLATE.format(nar) for nar in feature_batch.NarrativeLE]\n",
+    "    inputs = tokenizer(prompts, return_tensors=\"pt\", padding=True)\n",
+    "    inputs.to(\"cuda\")\n",
+    "\n",
+    "    # Generate outputs for variables\n",
+    "    outputs = model.generate(\n",
+    "        inputs[\"input_ids\"],\n",
+    "        attention_mask=inputs[\"attention_mask\"],\n",
+    "        max_new_tokens=MAX_NEW_TOKENS,\n",
+    "    )\n",
+    "    decoded = tokenizer.batch_decode(outputs, skip_special_tokens=True)\n",
+    "\n",
+    "    # Remove prompt from output\n",
+    "    decoded = [resp[len(prompt) :] for resp, prompt in zip(decoded, prompts)]\n",
+    "\n",
+    "    return decoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Batch inputs - note - we're running an example of 5 in this notebook\n",
+    "df = process_features(features.iloc[:5])\n",
+    "data_batches = batch_features(df, BATCH_SIZE)\n",
+    "\n",
+    "responses = []\n",
+    "idxs = []\n",
+    "logger.info(f\"Iterating over {len(data_batches)} batches\")\n",
+    "for ix, data_batch in enumerate(data_batches):\n",
+    "    logger.info(f\"Generating predictions on batch {ix}, with {len(data_batch)} samples\")\n",
+    "    responses += predict_on_batch(data_batch, model, tokenizer)\n",
+    "    idxs += list(data_batch.index)\n",
+    "logger.info(f\"Finished inference\")\n",
+    "interim_preds = pd.DataFrame({\"string_output\": responses}, index=df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(responses[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parse model outputs into submission-ready format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_response(output):\n",
+    "    \"\"\"\n",
+    "    Transform response into a json object using minimal cleaning\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Try loading the raw string into \n",
+    "        resp = json.loads(output)\n",
+    "        return resp\n",
+    "    except json.JSONDecodeError:\n",
+    "        pass\n",
+    "    try:\n",
+    "        # Get rid of extra trailing sections that follow \"--\"\n",
+    "        split_output = output.split(\"--\")[0]\n",
+    "        resp = json.loads(split_output)\n",
+    "        return resp\n",
+    "    except json.JSONDecodeError:\n",
+    "        pass\n",
+    "    try:\n",
+    "        # Get rid of sections that follow the a closing bracket \"}\"\n",
+    "        split_output = output.split(\"}\")[0] + \"}\"\n",
+    "        resp = json.loads(split_output)\n",
+    "        return resp\n",
+    "    except json.JSONDecodeError:\n",
+    "        logger.warning(f\"Failed to parse {output} into valid json\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_injury_location(data: pd.Series):\n",
+    "    \"\"\"\n",
+    "    Transform InjuryLocationType model output to integers, \n",
+    "    fill in default for invalid outputs\n",
+    "    \"\"\"\n",
+    "    ilt = data.map(\n",
+    "        {\n",
+    "            \"House, apartment\": 1,\n",
+    "            \"Motor vehicle (excluding school bus and public transportation)\": 2,\n",
+    "            \"Natural area (e.g., field, river, beaches, woods)\": 3,\n",
+    "            \"Park, playground, public use area\": 4,\n",
+    "            \"Street/road, sidewalk, alley\": 5,\n",
+    "            \"Other\": 6,\n",
+    "            \"Residence\": 1,\n",
+    "            \"Apartment\": 1,\n",
+    "        }\n",
+    "    )\n",
+    "    if ilt.isna().any():\n",
+    "        logger.warning(\n",
+    "            f\"There are unexpected values in injury location: {data[ilt.isna()].unique()} \"\n",
+    "        )\n",
+    "        ilt = ilt.fillna(6)  # Fill with other\n",
+    "\n",
+    "    return ilt.astype(int)\n",
+    "\n",
+    "\n",
+    "def process_weapon_type(data: pd.Series):\n",
+    "    \"\"\"\n",
+    "    Transform WeaponType1 model output to integers, \n",
+    "    fill in default for invalid outputs\n",
+    "    \"\"\"\n",
+    "    wt = data.map(\n",
+    "        {\n",
+    "            \"Blunt instrument\": 1,\n",
+    "            \"Drowning\": 2,\n",
+    "            \"Fall\": 3,\n",
+    "            \"Fire or burns\": 4,\n",
+    "            \"Firearm\": 5,\n",
+    "            \"Hanging, strangulation, suffocation\": 6,\n",
+    "            \"Motor vehicle including buses, motorcycles\": 7,\n",
+    "            \"Other transport vehicle, eg, trains, planes, boats\": 8,\n",
+    "            \"Poisoning\": 9,\n",
+    "            \"Sharp instrument\": 10,\n",
+    "            \"Other (e.g. taser, electrocution, nail gun)\": 11,\n",
+    "            \"Unknown\": 12,\n",
+    "        }\n",
+    "    )\n",
+    "    if wt.isna().any():\n",
+    "        logger.warning(\n",
+    "            f\"There are unexpected values in weapon type: {data[wt.isna()].unique()} \"\n",
+    "        )\n",
+    "        wt = wt.fillna(11)  # Fill with other\n",
+    "\n",
+    "    return wt.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idxs = []\n",
+    "parsed_resps = []\n",
+    "could_not_parse = []\n",
+    "\n",
+    "for row in interim_preds.itertuples():\n",
+    "    parsed = parse_response(row.string_output)\n",
+    "    if type(parsed) == dict:\n",
+    "        idxs.append(row.Index)\n",
+    "        parsed_resps.append(parsed)\n",
+    "    else:\n",
+    "        idxs.append(row.Index)\n",
+    "        could_not_parse.append(row.Index)\n",
+    "        # Fill any we couldn't parse with placeholder values for now\n",
+    "        parsed_resps.append(\n",
+    "            {\n",
+    "                \"DepressedMood\": 0,\n",
+    "                \"IntimatePartnerProblem\": 0,\n",
+    "                \"FamilyRelationship\": 0,\n",
+    "                \"Argument\": 0,\n",
+    "                \"MentalIllnessTreatmentCurrnt\": 0,\n",
+    "                \"HistoryMentalIllnessTreatmnt\": 0,\n",
+    "                \"SuicideAttemptHistory\": 0,\n",
+    "                \"SuicideThoughtHistory\": 0,\n",
+    "                \"SuicideNote\": 0,\n",
+    "                \"SubstanceAbuseProblem\": 0,\n",
+    "                \"SchoolProblem\": 0,\n",
+    "                \"RecentCriminalLegalProblem\": 0,\n",
+    "                \"SuicideIntentDisclosed\": 0,\n",
+    "                \"DisclosedToIntimatePartner\": 0,\n",
+    "                \"DisclosedToOtherFamilyMember\": 0,\n",
+    "                \"DisclosedToFriend\": 0,\n",
+    "                \"MentalHealthProblem\": 0,\n",
+    "                \"DiagnosisAnxiety\": 0,\n",
+    "                \"DiagnosisDepressionDysthymia\": 0,\n",
+    "                \"DiagnosisBipolar\": 0,\n",
+    "                \"DiagnosisAdhd\": 0,\n",
+    "                \"WeaponType1\": \"Unknown\",\n",
+    "                \"InjuryLocationType\": \"Other\",\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "if len(could_not_parse) > 0:\n",
+    "    logger.warning(\n",
+    "        f\"Could not parse {len(could_not_parse)} rows. Indices: {could_not_parse}\"\n",
+    "    )\n",
+    "\n",
+    "parsed_preds = pd.DataFrame(parsed_resps, index=pd.Index(idxs, name=\"uid\")).fillna(0)\n",
+    "parsed_preds[\"InjuryLocationType\"] = process_injury_location(\n",
+    "    parsed_preds.InjuryLocationType\n",
+    ")\n",
+    "parsed_preds[\"WeaponType1\"] = process_weapon_type(parsed_preds.WeaponType1)\n",
+    "\n",
+    "# Make sure the column order is the same as in the submission format\n",
+    "parsed_preds = parsed_preds[submission_format.columns]\n",
+    "\n",
+    "# Make sure the row order is the same as in the submission format\n",
+    "parsed_preds = parsed_preds.loc[features[:5].index]\n",
+    "\n",
+    "# Make sure all values are int\n",
+    "parsed_preds = parsed_preds.round().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columns are in the correct order\n",
+    "assert (submission_format.columns == parsed_preds.columns).all().all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All columns are of type int\n",
+    "assert (parsed_preds.dtypes == int).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variables have values within the expected range\n",
+    "assert parsed_preds.iloc[:, 0:-2].isin([0, 1]).all().all()\n",
+    "assert (parsed_preds[\"InjuryLocationType\"].isin(range(1, 7))).all()\n",
+    "assert (parsed_preds[\"WeaponType1\"].isin(range(1, 13))).all()"
    ]
   }
  ],
