--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -445,12 +445,12 @@
     }
    ],
    "source": [
-    "login(\"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\")"
+    "login(\"token here\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,10 @@
       "\u001b[32m2024-09-20 13:50:42.780\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m2\u001b[0m - \u001b[1mDownloading model\u001b[0m\n",
       "\u001b[32m2024-09-20 13:50:42.784\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msave_model\u001b[0m:\u001b[36m2\u001b[0m - \u001b[1mUsing device cpu to save model to assets\u001b[0m\n",
       "\u001b[32m2024-09-20 13:50:42.786\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msave_model\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mDownloading model\u001b[0m\n",
-      "Downloading shards:  67%|██████▋   | 2/3 [43:29<22:46, 1366.09s/it]"
+      "Downloading shards: 100%|██████████| 3/3 [1:11:03<00:00, 1421.22s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [01:03<00:00, 21.20s/it]\n",
+      "\u001b[32m2024-09-20 15:02:53.731\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msave_model\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mSaving model to assets\u001b[0m\n",
+      "\u001b[32m2024-09-20 15:11:42.632\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msave_model\u001b[0m:\u001b[36m22\u001b[0m - \u001b[32m\u001b[1mModel and tokenizer saved\u001b[0m\n"
      ]
     }
    ],
@@ -474,9 +477,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-09-20 15:13:18.250\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m1\u001b[0m - \u001b[1mLoading model from assets, True\u001b[0m\n",
+      "Loading checkpoint shards: 100%|██████████| 6/6 [00:02<00:00,  2.78it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f\"Loading model from {MODEL_DIR}, {MODEL_DIR.exists()}\")\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
@@ -511,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
